// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAhlg8lUXEyGOHsMEDArczqZ-mDMlB1sbf9Hh83Eb2fDlP9"`;

exports[`feature-random should implement random correctly 2`] = `"kQBt6mDedxz0G2oqZA2WXbRsjITzc5FvRBH2yPydbSyzhUpA"`;

exports[`feature-random should implement random correctly 3`] = `"kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQAhlg8lUXEyGOHsMEDArczqZ-mDMlB1sbf9Hh83Eb2fDlP9",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16393n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAhlg8lUXEyGOHsMEDArczqZ-mDMlB1sbf9Hh83Eb2fDlP9",
            "to": "kQBt6mDedxz0G2oqZA2WXbRsjITzc5FvRBH2yPydbSyzhUpA",
            "type": "internal",
            "value": 9971719000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAhlg8lUXEyGOHsMEDArczqZ-mDMlB1sbf9Hh83Eb2fDlP9",
          "to": "kQBt6mDedxz0G2oqZA2WXbRsjITzc5FvRBH2yPydbSyzhUpA",
          "type": "internal",
          "value": 9971719000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14221n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBt6mDedxz0G2oqZA2WXbRsjITzc5FvRBH2yPydbSyzhUpA",
            "to": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
            "type": "internal",
            "value": 9949045000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBt6mDedxz0G2oqZA2WXbRsjITzc5FvRBH2yPydbSyzhUpA",
          "to": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
          "type": "internal",
          "value": 9949045000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14157n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
            "to": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
            "type": "internal",
            "value": 9926427000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
          "to": "kQBZOTvk_lJzUtsfAj3MsM6_FWoj-rNYGMz-UfTrp0CExhLl",
          "type": "internal",
          "value": 9926427000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3201n,
      },
    ],
  },
]
`;
